small fix for quotes visibility

--- a/css/style.css
+++ b/css/style.css
@@ -499,8 +499,12 @@ textarea {
   right: 0;
 }
 
-.quotes__item:not(:first-child) {
+.quotes__item {
   display: none;
+}
+
+.quotes__item--active {
+  display: block;
 }
 
 .quotes__text {
